# BallSort

./: CMakeLists.txt  README.md
examples/: 1.txt  2.txt  3.txt  4.txt
src/: Board.cpp  Board.hpp  Executor.cpp  Executor.hpp  INode.hpp  NodeWeight.hpp  main.cpp
